Rollback a implementación original basada en tabla - Eliminadas clases Trie, TrieNode y Redis - AutocompleteService usa búsquedas directas en BD con cache - Restauradas anotaciones @Cacheable y @CacheEvict - Eliminada dependencia de Redis - Configuración simplificada sin Redis en docker-compose - Implementación usando solo PostgreSQL con índices optimizados